[gd_scene load_steps=11 format=3 uid="uid://b2rshxtmnb5su"]

[ext_resource type="Texture2D" uid="uid://2j36buyt2ctl" path="res://Assets/Ice_Platform.png" id="1_bmwe6"]
[ext_resource type="Script" path="res://Assets/ice_platform.gd" id="1_ibnlp"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jybte"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rys7q"]
atlas = ExtResource("1_bmwe6")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8okll"]
atlas = ExtResource("1_bmwe6")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_absm7"]
atlas = ExtResource("1_bmwe6")
region = Rect2(48, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jneac"]
atlas = ExtResource("1_bmwe6")
region = Rect2(96, 0, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_twh7h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rys7q")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8okll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_absm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jneac")
}],
"loop": false,
"name": &"Melting",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlest"]
size = Vector2(240, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhp58"]
size = Vector2(240, 100)

[node name="IcePlatform" type="StaticBody2D"]
physics_material_override = SubResource("PhysicsMaterial_jybte")
script = ExtResource("1_ibnlp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_twh7h")
animation = &"Default"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mlest")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_fhp58")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
